force-app/main/default/objects/Pricebook2/fields/Decision_Code__c.field-meta.xml
<CustomField>
    <fullName>Decision_Code__c</fullName>
    <label>Decision Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>