force-app/main/default/objects/Pricebook2/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Date</type>
</CustomField>