force-app/main/default/objects/Pricebook2/fields/is_Employee__c.field-meta.xml
<CustomField>
    <fullName>is_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Employee</label>
    <type>Checkbox</type>
</CustomField>