force-app/main/default/objects/Pricebook2/fields/Price_Book_Origin__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Origin</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>