force-app/main/default/objects/Pricebook2/fields/Pricebook_Code__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Code__c</fullName>
    <displayFormat>PBB-{0000}</displayFormat>
    <label>Pricebook Code</label>
    <type>AutoNumber</type>
</CustomField>