force-app/main/default/objects/Pricebook2/fields/Pricebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Pricebook ID_18</label>
    <type>Text</type>
</CustomField>