force-app/main/default/objects/Pricebook2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCAService</fullName>
                <label>PCA - Service</label>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Service Package</fullName>
            </value>
            <value>
                <fullName>Internal Service</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Standard Pricebook</fullName>
            </value>
            <value>
                <fullName>External Service</fullName>
                <isActive>false</isActive>
                <label>External Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>