force-app/main/default/objects/Pricebook2/recordTypes/External_Service.recordType-meta.xml
<RecordType>
    <fullName>External_Service</fullName>
    <active>false</active>
    <label>Pricebook External</label>
</RecordType>