force-app/main/default/objects/Pricebook2/recordTypes/Pricebook_Internal.recordType-meta.xml
<RecordType>
    <fullName>Pricebook_Internal</fullName>
    <active>true</active>
    <label>Pricebook Internal</label>
</RecordType>